[package]
name = "blog_os"
version = "0.1.0"
authors = ["krepl <36075613+krepl@users.noreply.github.com>"]
edition = "2018"

[package.metadata.bootimage]
default-target = "x86_64-blog_os.json"

[dependencies]
bootloader = "0.3.12"
volatile = "0.2.3"
spin = "0.4.9"
uart_16550 = "0.1.0"
x86_64 = "0.4.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dev-dependencies]
array-init = "0.0.3"
pretty_assertions = "0.6.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
